# textamp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README-GUI.md  README-TUI.md  README.md  build-gui.bat  build-gui.sh  build-tui.bat  build-tui.sh  build.bat  build.sh  config.example.toml  config.example.yaml  simplelogo.txt  textamp.ansi  textamp_clean.ansi  textamp_logo.ansi
dev/: drive.ps1  loop.sh  notarize-mac.sh  notarize-tui-mac.sh  snap-window.ps1  snap.sh  win-build-example.ps1  win-build.ps1  win-build.sh
examples/: audio_smoke.rs  test_stations.rs  test_stations_auth.rs
src/: lib.rs  main.rs  miller.rs
src/app/: action.rs  dispatch.rs  event.rs  event_core.rs  event_loop.rs  mod.rs  navigation.rs  playback.rs  queue.rs  state.rs  theme.rs
src/app/handlers/: context.rs  dispatch_browse.rs  dispatch_data.rs  dispatch_folders.rs  dispatch_miller.rs  dispatch_navigation.rs  dispatch_playback.rs  dispatch_queue.rs  dispatch_radio.rs  dispatch_search.rs  dispatch_settings.rs  dispatch_system.rs  events.rs  helpers.rs  key_input.rs  lazy_art.rs  mod.rs  mouse_input.rs
src/app/handlers/helpers/: cache.rs  compilations.rs  connection.rs  mod.rs  navigation.rs  playback.rs  preload.rs  refresh.rs
src/app/handlers/key_input/: adventure_launcher.rs  alt_commands.rs  artist_radio_picker.rs  browse.rs  mod.rs  now_playing.rs  radio_launcher.rs  related.rs  search.rs  settings.rs  similar.rs  sort_popup.rs
src/audio/: cache.rs  mod.rs  player.rs  rodio_backend.rs  streaming.rs  traits.rs
src/config/: mod.rs  settings.rs  xdg.rs
src/plex/: artwork_cache.rs  auth.rs  cache.rs  client.rs  constants.rs  error.rs  mod.rs  remote.rs  spectrogram.rs  waveform.rs
src/plex/models/: artist.rs  folder.rs  genre.rs  hub.rs  library.rs  mod.rs  playlist.rs  search.rs  serde_helpers.rs  sonic.rs
src/services/: adventure.rs  artist_alias_service.rs  browse_drill.rs  cache_service.rs  external_search.rs  folder_service.rs  library_service.rs  list_filter_service.rs  mod.rs  navigation_service.rs  playback_service.rs  preload_service.rs  search_filter_service.rs  selection_service.rs  track_context.rs
src/ui/: app.rs  artwork.rs  command_palette.rs  hit_regions.rs  layout.rs  mod.rs  theme.rs
src/ui/screens/: adventure_launcher.rs  album.rs  artist.rs  artist_radio_picker.rs  auth.rs  filter.rs  help.rs  home.rs  mod.rs  now_playing.rs  playlist.rs  radio_launcher.rs  related.rs  settings.rs  similar.rs  sort_popup.rs
src/ui/widgets/: mod.rs  now_playing_bar.rs  progress_bar.rs  scrollbar.rs  selectable_list.rs  track_list.rs  transport.rs
src/ui_gui/: app.rs  images.rs  menu.rs  message.rs  mod.rs  shortcuts.rs  theme.rs  viewport.rs
src/ui_gui/input/: mod.rs
src/ui_gui/screens/: auth.rs  browse.rs  help.rs  mod.rs  now_playing.rs  queue.rs  related.rs  search.rs  settings.rs  similar.rs
src/ui_gui/screens/popups/: about.rs  adventure_launcher.rs  artist_radio_picker.rs  bio.rs  command_palette.rs  dialogs.rs  dj_modes.rs  keyboard_shortcuts.rs  library_picker.rs  mod.rs  radio_launcher.rs  related.rs  remix_tools.rs  search.rs  settings_popup.rs  similar.rs  sort.rs  stations.rs  user_guide.rs
src/ui_gui/widgets/: context_menu.rs  menu_bar.rs  miller_column.rs  mod.rs  spectrogram_canvas.rs  spectrum_canvas.rs  tab_strip.rs  transport_bar.rs  vectorscope_canvas.rs  waveform_canvas.rs
src/util/: help_text.rs  lockfile.rs  logging.rs  mod.rs  paths.rs  terminal.rs  text.rs
