[package]
name = "textamp"
version = "1.0.0"
edition = "2021"
description = "A keyboard-driven TUI client for Plex Music"
license = "MIT"
authors = ["John Bergmayer"]
keywords = ["plex", "music", "tui", "plexamp"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client - use native-tls (OpenSSL) for better compatibility with Plex servers
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "deflate", "charset", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Album art (Kitty graphics protocol)
ratatui-image = "9"
image = "0.25"
base64 = "0.22"

# Audio playback
rodio = { version = "0.21", features = ["symphonia-all"] }

# Audio decoding for waveform generation
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "alac", "flac", "ogg", "wav", "pcm"] }

# Ring buffer for streaming
ringbuf = "0.4"

# URL encoding
urlencoding = "2"

# UUID for client identifier
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Directory paths
dirs = "5"

# Async stream utilities
futures = "0.3"
tokio-stream = "0.1"

# Hostname detection
hostname = "0.4"

# Random number generation
rand = "0.9"

# Unicode display width
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 3
